# substrate-smart-contracts

./: .gitignore  Makefile  README.md
api_metadata/: .gitignore  Cargo.toml
flipper/tests/: Cargo.toml
flipper/tests/src/: main.rs
flipper/tests/tests/: integ_tests.rs
test_common/: Cargo.toml
test_common/src/: consts.rs  lib.rs  test_base_context.rs  test_client_context.rs  test_contract_context.rs  test_node_context.rs
