[package]
name = "api_metadata"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scale = { package = "parity-scale-codec", version = "2.1", default-features = false, features = ["derive"] }
scale-info = { version = "1.0.0", default-features = false, features = ["derive"], optional = true }
subxt = { git = "https://github.com/paritytech/subxt.git", rev = "a701d80" }

[lib]
name = "api_metadata"
path = "src/lib.rs"
