[package]
name = "test_common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api_metadata = { path = "../api_metadata" }
subxt = { git = "https://github.com/paritytech/subxt.git", rev = "a701d80" }
test-context = "0.1.3"
async-trait = "0.1.51"
futures = "0.3.18"
portpicker = "0.1.1"
anyhow = "1.0.48"
