[package]
name = "tests"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
api_metadata = { path = "../../api_metadata" }
subxt = { git = "https://github.com/paritytech/subxt.git", rev = "a701d80" }
tokio = { version = "1.14.0", features = ["full"] }
env_logger = "0.9.0"
hex = "0.4.3"