[package]
name = "tests"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
api_metadata = { path = "../../api_metadata" }
subxt = { git = "https://github.com/paritytech/subxt.git", rev = "a701d80" }
sp-keyring = { package = "sp-keyring", git = "https://github.com/paritytech/substrate/", branch = "master" }
tokio = { version = "1.14.0", features = ["full"] }
env_logger = "0.9.0"
hex = "0.4.3"
assert_matches = "1.5.0"
parity-scale-codec = "2.3.1"
rand = "0.8.4"
ink_env = "3.0.0-rc6"

[features]
default = ["std"]
std = [
	"ink_env/std",
]