[package]
name = "tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
api_metadata = { path = "../../api_metadata" }
test_common = { path = "../../test_common" }
subxt = { git = "https://github.com/paritytech/subxt.git", rev = "a701d80" }
sp-keyring = { package = "sp-keyring", git = "https://github.com/paritytech/substrate/", branch = "master" }
tokio = { version = "1.14.0", features = ["full"] }
log = "0.4.14"
env_logger = "0.9.0"
hex = "0.4.3"
assert_matches = "1.5.0"
parity-scale-codec = "2.3.1"
rand = "0.8.4"
ink_env = "3.0.0-rc6"
test-context = "0.1.3"
async-trait = "0.1.51"
futures = "0.3.18"
anyhow = "1.0.48"
pallet-contracts-primitives = { package = "pallet-contracts-primitives", git = "https://github.com/paritytech/substrate/", branch = "master" }
sp-rpc = { package = "sp-rpc", git = "https://github.com/paritytech/substrate/", branch = "master" }
serde = "1.0.130"
jsonrpsee-types = "0.4.1"

[features]
default = ["std"]
std = [
	"ink_env/std",
]